@@ -10,6 +10,7 @@ on their contributions. Names are listed in alphabetical order.
       DJ Chrysalis 		(j@4u.net)
  [JB] Jean-Baptiste         	()
 [JLB] Jody Lee Bruchon		(jody@jodybruchon.com)
+[JKL] Jan Klabacka		(jan.klabacka@gmail.com)
  [KK] Kresimir Kukulj 		(madmax@pc-hrvoje.srce.hr)
  [LB] Laurent Bonnaud		(Laurent.Bonnaud@iut2.upmf-grenoble.fr)
  [LM] Luca Montecchiani 	(m.luca@iname.com)
