@@ -2,4 +2,4 @@
 # VERSION determines the program's version number.
 #
 
-VERSION = 1.51-jody4
+VERSION = 1.51-jody4-jkl1
